--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,26 +1,31 @@
 ---
 driver:
-  name: vagrant
+  name: docker
+  use_sudo: false
+  chef_version: latest
 
 provisioner:
   name: chef_zero
-  # You may wish to disable always updating cookbooks in CI or other testing environments.
-  # For example:
-  #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
 
 verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
-  - name: centos-7
+- name: centos-7
+  driver_config:
+    image: centos/systemd
+    run_command: /usr/sbin/init
+    privileged: true
+    provision_command:
+      - sed -i 's/UsePAM yes/UsePAM no/g' /etc/ssh/sshd_config
+      - systemctl enable sshd.service
 
 suites:
   - name: default
     run_list:
-      - recipe[sshkeys::default]
+      - recipe[sshkeys]
+    data_bags_path: "test/databags"
     verifier:
       inspec_tests:
         - test/integration/default
-    attributes:
